{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Movement",
            "id": "a4b817d6-4247-44b7-a46c-83972967e442",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f306a795-dda0-4163-8ed3-d2592172ec76",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "cd30b899-2ee3-4a3b-a7f7-9841f6e7811f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bfd52a47-12cf-4a21-8ac1-ea5c0150b4f0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2a6f5603-c73e-435e-840e-57b6834c7820",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "11f5d39a-1d6f-46b0-b235-dcc20159268e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "eaa4bc31-ac00-4a0a-afc8-d601b080e240",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Attack",
            "id": "95cf30c7-d321-4edc-9601-b1c7d951c8ec",
            "actions": [
                {
                    "name": "ClickAttack",
                    "type": "Button",
                    "id": "eeb80646-728b-46f6-bfd1-1f098fc66ab6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aadd04fb-1ccd-4a62-929d-0d756061798b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}